# dotfiles

./: .eslintrc  .gitconfig  .gitconfig.linux  .gitconfig.local##os.Linux  .gitignore  .gitmodules  .ignore  .rgrc  .tmux.conf  .vimrc  .zshrc  README.md
.config/: starship.toml  themes.json
.config/atuin/: config.toml
.config/bat/: config
.config/direnv/: direnvrc
.config/ghostty/: config  config##os.Darwin  config##os.Linux  cursor_blaze.glsl
.config/hypr/: hyprland.conf  hyprlock.conf
.config/kitty/: env.conf  horizon.conf  kitty-session  kitty.conf  kitty.conf##os.Linux  open-actions.conf  send_to_vim.py
.config/niri/: config.kdl  window-rules.kdl
.config/nvim/: ale.vim  completion.vim  copypaste.vim  diff.vim  difflines.vim  functions.vim  fzf.vim  git.vim  google.vim  ignorelint.vim  illuminate.vim  init.lua  init.vim  javascript.vim  lazy-lock.json  lazyvim.json  lightline.vim  mason-lock.json  nvimtree.vim  quickfix.vim  snippets.vim  style.vim  tabs.vim  (+9 more)
.vsnip/: cs.json  eruby.json  global.json  javascript.json  lua.json  ruby.json  rust.json
.zsh/: atuin.zsh  autoload.zsh  bin.zsh  bob.zsh  claude.zsh  delta.zsh  emacs-key-bindings.zsh  eza.zsh  fzf.zsh  go.zsh  heroku-pr-app.zsh  history.zsh  hub.zsh  kitty-hide.zsh  kitty.zsh  kubernetes.zsh  less.zsh  locale.zsh  ls.zsh  nvim.zsh  nvr.zsh  pip3.zsh  prompt.zsh  prompt.zsh-theme  pyenv.zsh  rbenv.zsh  rg.zsh  show-fonts.zsh  show-hyperlink.zsh  snippets.zsh  tab-title.zsh  theme.zsh  uuid.zsh  uv.zsh  zsh-ai.zsh  zsh-read-history.zsh
src/fzf-mru/: Cargo.toml
src/fzf-mru/src/: main.rs
(+213 files in other folders)
